--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Force Failure
+      - name: Run tests
+        run: go test ./...
+
+      - name: Success
         run: (exit 0)
